# poetic_ontology_builder

./: .gitignore  CHANGELOG.md  README.md  awe.html  pyproject.toml  requirements.txt  rilke.txt  setup.py  test.txt
.github/workflows/: python-package.yml
poetic_ontology_builder/: __init__.py  builder.py  cli.py  utils.py
